# FEDLORAsemble

./: .gitignore  Berttest.py  Berttrainer.py  MOE.py  Readme.md  chat_history.json  log.txt  loratest.py  mmatrainingdata.json  moe.txt  pyproject.toml  test.py  tester.py  trainingdata.json
bert-router/: tokenizer.json
bert_router/checkpoint-574/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-656/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-697/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-738/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-779/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-820/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-861/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-902/: config.json  rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-943/: rng_state.pth  scheduler.pt  trainer_state.json
bert_router/checkpoint-984/: rng_state.pth  scheduler.pt  trainer_state.json
logs/: events.out.tfevents.1738612308.VW2401.37448.0  events.out.tfevents.1738612357.VW2401.77452.0  events.out.tfevents.1738612426.VW2401.71200.0
lora/ALPLoraqwen2.5-0.5B/: README.md  adapter_config.json
lora/alpqweninstructlora/: README.md  adapter_config.json
training/: AImodels.py  __init__.py  client_app.py  dataset.py  log.txt  models.py  run.sh  run_all.py  server_app.py  standalone_client.py  strategy.py  test.py
training/results/2025-03-31_14-34-25/checkpoint-20/: README.md  adapter_config.json  rng_state.pth  scheduler.pt  tokenizer_config.json  trainer_state.json
